--- a/WC总览/总览作战包.yaml
+++ b/WC总览/总览作战包.yaml
@@ -111,253 +111,6 @@ overviewColumns:
   - TYPE
   - VELOCITY
 presets:
-  - - <color=0xFFFF6666>✯ 作战：非舰队成员</color>
-    - - - alwaysShownStates
-        - []
-      - - filteredStates
-        - - 11
-          - 21
-      - - groups
-        - - 6
-          - 10
-          - 15
-          - 25
-          - 26
-          - 27
-          - 28
-          - 29
-          - 30
-          - 31
-          - 90
-          - 237
-          - 286
-          - 310
-          - 324
-          - 337
-          - 358
-          - 361
-          - 365
-          - 366
-          - 380
-          - 381
-          - 419
-          - 420
-          - 463
-          - 479
-          - 485
-          - 492
-          - 513
-          - 520
-          - 522
-          - 523
-          - 527
-          - 533
-          - 534
-          - 540
-          - 541
-          - 543
-          - 547
-          - 548
-          - 550
-          - 551
-          - 552
-          - 553
-          - 554
-          - 555
-          - 556
-          - 557
-          - 558
-          - 559
-          - 560
-          - 561
-          - 562
-          - 563
-          - 564
-          - 565
-          - 566
-          - 567
-          - 568
-          - 569
-          - 570
-          - 571
-          - 572
-          - 573
-          - 574
-          - 575
-          - 576
-          - 577
-          - 578
-          - 579
-          - 580
-          - 581
-          - 582
-          - 583
-          - 584
-          - 593
-          - 594
-          - 595
-          - 596
-          - 597
-          - 602
-          - 603
-          - 604
-          - 605
-          - 606
-          - 611
-          - 612
-          - 613
-          - 614
-          - 615
-          - 620
-          - 621
-          - 622
-          - 623
-          - 624
-          - 629
-          - 630
-          - 631
-          - 632
-          - 633
-          - 659
-          - 755
-          - 756
-          - 757
-          - 758
-          - 759
-          - 760
-          - 761
-          - 789
-          - 790
-          - 791
-          - 792
-          - 793
-          - 794
-          - 795
-          - 796
-          - 797
-          - 798
-          - 799
-          - 800
-          - 801
-          - 802
-          - 803
-          - 804
-          - 805
-          - 806
-          - 807
-          - 808
-          - 809
-          - 810
-          - 811
-          - 812
-          - 813
-          - 814
-          - 816
-          - 817
-          - 818
-          - 819
-          - 820
-          - 821
-          - 822
-          - 823
-          - 824
-          - 825
-          - 826
-          - 827
-          - 828
-          - 829
-          - 830
-          - 831
-          - 832
-          - 833
-          - 834
-          - 843
-          - 844
-          - 845
-          - 846
-          - 847
-          - 848
-          - 849
-          - 850
-          - 851
-          - 852
-          - 861
-          - 863
-          - 864
-          - 865
-          - 866
-          - 867
-          - 868
-          - 875
-          - 883
-          - 893
-          - 894
-          - 897
-          - 898
-          - 900
-          - 902
-          - 906
-          - 920
-          - 925
-          - 941
-          - 959
-          - 960
-          - 961
-          - 963
-          - 982
-          - 983
-          - 984
-          - 985
-          - 986
-          - 987
-          - 988
-          - 1003
-          - 1012
-          - 1022
-          - 1051
-          - 1052
-          - 1053
-          - 1054
-          - 1056
-          - 1149
-          - 1201
-          - 1202
-          - 1246
-          - 1247
-          - 1249
-          - 1250
-          - 1273
-          - 1274
-          - 1275
-          - 1276
-          - 1283
-          - 1305
-          - 1316
-          - 1404
-          - 1406
-          - 1408
-          - 1527
-          - 1534
-          - 1538
-          - 1548
-          - 1657
-          - 1704
-          - 1876
-          - 1924
-          - 1972
-          - 1991
-          - 2001
-          - 2015
-          - 2016
-          - 2017
-          - 2020
-          - 4073
-          - 4079
-          - 4081
-          - 4088
-          - 4093
-          - 4107
-          - 4137
   - - <color=0xFFFF6666>✯ --- 作战：基本（+敌对 +NPC）</color>
     - - - alwaysShownStates
         - []
@@ -905,7 +658,7 @@ presets:
           - 4093
           - 4107
           - 4137
-  - - <color=0xFFFF6666>✯ 作战：建筑</color>
+  - - <color=0xFFFF6666>✯ = 作战：只有舰船</color>
     - - - alwaysShownStates
         - []
       - - filteredStates
@@ -917,21 +670,99 @@ presets:
           - 21
           - 45
       - - groups
+        - - 25
+          - 26
+          - 27
+          - 28
+          - 29
+          - 30
+          - 31
+          - 237
+          - 324
+          - 358
+          - 380
+          - 381
+          - 419
+          - 420
+          - 463
+          - 485
+          - 513
+          - 540
+          - 541
+          - 543
+          - 547
+          - 659
+          - 830
+          - 831
+          - 832
+          - 833
+          - 834
+          - 883
+          - 893
+          - 894
+          - 898
+          - 900
+          - 902
+          - 906
+          - 941
+          - 963
+          - 1022
+          - 1201
+          - 1202
+          - 1283
+          - 1305
+          - 1527
+          - 1534
+          - 1538
+          - 1972
+          - 2001
+  - - <color=0xFFFF6666>✯ 作战：NPSI</color>
+    - - - alwaysShownStates
+        - []
+      - - filteredStates
+        - - 11
+          - 21
+      - - groups
         - - 6
           - 10
           - 15
+          - 25
+          - 26
+          - 27
+          - 28
+          - 29
+          - 30
+          - 31
+          - 90
+          - 237
+          - 286
           - 310
+          - 324
           - 337
+          - 358
           - 361
           - 365
           - 366
-          - 411
+          - 380
+          - 381
+          - 419
+          - 420
+          - 463
+          - 479
+          - 485
+          - 492
+          - 513
           - 520
           - 522
           - 523
           - 527
           - 533
           - 534
+          - 540
+          - 541
+          - 543
+          - 547
+          - 548
           - 550
           - 551
           - 552
@@ -992,6 +823,7 @@ presets:
           - 631
           - 632
           - 633
+          - 659
           - 755
           - 756
           - 757
@@ -1039,6 +871,11 @@ presets:
           - 827
           - 828
           - 829
+          - 830
+          - 831
+          - 832
+          - 833
+          - 834
           - 843
           - 844
           - 845
@@ -1050,16 +887,28 @@ presets:
           - 851
           - 852
           - 861
+          - 863
+          - 864
           - 865
           - 866
           - 867
           - 868
-          - 874
           - 875
+          - 883
+          - 893
+          - 894
           - 897
+          - 898
+          - 900
+          - 902
+          - 906
+          - 920
+          - 925
+          - 941
           - 959
           - 960
           - 961
+          - 963
           - 982
           - 983
           - 984
@@ -1068,16 +917,16 @@ presets:
           - 987
           - 988
           - 1003
-          - 1005
           - 1012
-          - 1025
+          - 1022
           - 1051
           - 1052
           - 1053
           - 1054
           - 1056
-          - 1106
           - 1149
+          - 1201
+          - 1202
           - 1246
           - 1247
           - 1249
@@ -1086,26 +935,31 @@ presets:
           - 1274
           - 1275
           - 1276
-          - 1297
-          - 1312
+          - 1283
+          - 1305
           - 1316
           - 1404
-          - 1405
           - 1406
-          - 1407
           - 1408
-          - 1409
-          - 1410
+          - 1527
+          - 1534
+          - 1538
+          - 1548
           - 1657
+          - 1704
           - 1876
           - 1924
+          - 1972
+          - 1991
+          - 2001
           - 2015
           - 2016
           - 2017
           - 2020
-          - 4033
+          - 4073
           - 4079
           - 4081
+          - 4088
           - 4093
           - 4107
           - 4137
@@ -1360,45 +1214,6 @@ presets:
           - 2020
           - 4033
           - 4079
-          - 4088
-          - 4093
-          - 4107
-          - 4137
-  - - <color=0xFFFF6666>✯ 作战：可部署装置</color>
-    - - - alwaysShownStates
-        - []
-      - - filteredStates
-        - - 11
-          - 12
-          - 14
-          - 15
-          - 16
-          - 21
-      - - groups
-        - - 12
-          - 90
-          - 186
-          - 340
-          - 361
-          - 448
-          - 479
-          - 492
-          - 548
-          - 649
-          - 863
-          - 864
-          - 1149
-          - 1246
-          - 1247
-          - 1249
-          - 1250
-          - 1273
-          - 1274
-          - 1275
-          - 1276
-          - 1297
-          - 1312
-          - 1548
           - 4088
           - 4093
           - 4107
@@ -1928,72 +1743,6 @@ presets:
           - 4093
           - 4107
           - 4137
-  - - <color=0xFFFF6666>✯ = 作战：只有舰船</color>
-    - - - alwaysShownStates
-        - []
-      - - filteredStates
-        - - 11
-          - 12
-          - 14
-          - 15
-          - 16
-          - 21
-          - 45
-      - - groups
-        - - 25
-          - 26
-          - 27
-          - 28
-          - 29
-          - 30
-          - 31
-          - 90
-          - 237
-          - 324
-          - 358
-          - 380
-          - 381
-          - 419
-          - 420
-          - 463
-          - 479
-          - 485
-          - 513
-          - 540
-          - 541
-          - 543
-          - 547
-          - 548
-          - 659
-          - 830
-          - 831
-          - 832
-          - 833
-          - 834
-          - 863
-          - 864
-          - 883
-          - 893
-          - 894
-          - 898
-          - 900
-          - 902
-          - 906
-          - 941
-          - 963
-          - 1022
-          - 1201
-          - 1202
-          - 1283
-          - 1305
-          - 1527
-          - 1534
-          - 1538
-          - 1548
-          - 1704
-          - 1972
-          - 2001
-          - 4088
 shipLabelOrder:
   - ship type
   - alliance
