--- a/WC总览/总览核心.yaml
+++ b/WC总览/总览核心.yaml
@@ -8,12 +8,12 @@ backgroundOrder:
   - 13
   - 44
   - 52
+  - 19
+  - 18
   - 51
   - 9
   - 50
   - 53
-  - 19
-  - 18
   - 49
   - 10
   - 17
@@ -3049,7 +3049,7 @@ stateColorsNameList:
   - - background_16
     - darkBlue
   - - background_18
-    - red
+    - orange
   - - background_20
     - white
   - - background_21
@@ -3057,7 +3057,7 @@ stateColorsNameList:
   - - background_44
     - red
   - - background_45
-    - blue
+    - darkTurquoise
   - - background_48
     - white
   - - background_49
@@ -3067,10 +3067,16 @@ stateColorsNameList:
   - - background_51
     - orange
   - - background_52
-    - orange
+    - red
+  - - background_66
+    - blue
   - - background_9
     - orange
+  - - flag_45
+    - darkTurquoise
   - - flag_48
+    - white
+  - - flag_49
     - white
 tabSetup:
   - - 0
