--- a/WC总览/总览框架 （闪烁版）.yaml
+++ b/WC总览/总览框架 （闪烁版）.yaml
@@ -8,12 +8,12 @@ backgroundOrder:
   - 13
   - 44
   - 52
+  - 19
+  - 18
   - 51
   - 9
   - 50
   - 53
-  - 19
-  - 18
   - 49
   - 10
   - 17
@@ -311,7 +311,7 @@ stateColorsNameList:
   - - background_16
     - darkBlue
   - - background_18
-    - red
+    - orange
   - - background_20
     - white
   - - background_21
@@ -319,7 +319,7 @@ stateColorsNameList:
   - - background_44
     - red
   - - background_45
-    - blue
+    - darkTurquoise
   - - background_48
     - white
   - - background_49
@@ -329,9 +329,13 @@ stateColorsNameList:
   - - background_51
     - orange
   - - background_52
-    - orange
+    - red
+  - - background_66
+    - blue
   - - background_9
     - orange
+  - - flag_45
+    - darkTurquoise
   - - flag_48
     - white
   - - flag_49
