--- a/WC总览/总览核心.yaml
+++ b/WC总览/总览核心.yaml
@@ -187,6 +187,7 @@ presets:
           - 1211
           - 1246
           - 1247
+          - 1249
           - 1250
           - 1275
           - 1276
@@ -199,16 +200,22 @@ presets:
           - 1534
           - 1537
           - 1538
+          - 1548
           - 1652
           - 1653
           - 1657
+          - 1876
+          - 1924
           - 1972
           - 1991
           - 2001
           - 2016
           - 2017
           - 4088
+          - 4093
+          - 4107
           - 4594
+          - 4644
   - - ⌘ 图标：作战/目标/友军（+无人机 -残骸）
     - - - alwaysShownStates
         - []
@@ -671,7 +678,9 @@ presets:
           - 4432
           - 4433
           - 4434
+          - 4477
           - 4494
+          - 4499
           - 4501
           - 4547
           - 4549
@@ -684,6 +693,21 @@ presets:
           - 4576
           - 4577
           - 4594
+          - 4636
+          - 4637
+          - 4638
+          - 4644
+          - 4647
+          - 4648
+          - 4649
+          - 4650
+          - 4651
+          - 4652
+          - 4653
+          - 4654
+          - 4655
+          - 4656
+          - 4673
   - - <color=0xFFFD96CF>※ D-Scan：收割（+无人机）</color>
     - - - alwaysShownStates
         - []
@@ -746,7 +770,9 @@ presets:
           - 1202
           - 1246
           - 1247
+          - 1249
           - 1250
+          - 1275
           - 1276
           - 1283
           - 1305
@@ -764,12 +790,17 @@ presets:
           - 1652
           - 1653
           - 1657
+          - 1876
+          - 1924
           - 1972
           - 2001
           - 2016
           - 2017
           - 4088
+          - 4093
+          - 4107
           - 4594
+          - 4644
   - - ⌘ 图标：作战/目标/友军（-无人机 -残骸）
     - - - alwaysShownStates
         - []
@@ -1222,7 +1253,9 @@ presets:
           - 4432
           - 4433
           - 4434
+          - 4477
           - 4494
+          - 4499
           - 4501
           - 4547
           - 4549
@@ -1235,6 +1268,21 @@ presets:
           - 4576
           - 4577
           - 4594
+          - 4636
+          - 4637
+          - 4638
+          - 4644
+          - 4647
+          - 4648
+          - 4649
+          - 4650
+          - 4651
+          - 4652
+          - 4653
+          - 4654
+          - 4655
+          - 4656
+          - 4673
   - - ⌘ 图标：生产
     - - - alwaysShownStates
         - []
@@ -1732,7 +1780,9 @@ presets:
           - 4432
           - 4433
           - 4434
+          - 4477
           - 4494
+          - 4499
           - 4501
           - 4513
           - 4514
@@ -1750,6 +1800,21 @@ presets:
           - 4576
           - 4577
           - 4594
+          - 4636
+          - 4637
+          - 4638
+          - 4644
+          - 4647
+          - 4648
+          - 4649
+          - 4650
+          - 4651
+          - 4652
+          - 4653
+          - 4654
+          - 4655
+          - 4656
+          - 4673
   - - ⌘ 图标：所有
     - - - alwaysShownStates
         - []
@@ -1794,6 +1859,7 @@ presets:
           - 311
           - 318
           - 319
+          - 323
           - 324
           - 336
           - 337
@@ -2275,28 +2341,36 @@ presets:
           - 4036
           - 4037
           - 4053
+          - 4070
           - 4073
           - 4079
           - 4081
           - 4088
           - 4093
           - 4094
+          - 4100
           - 4105
           - 4106
           - 4107
+          - 4128
+          - 4130
           - 4137
           - 4161
+          - 4168
           - 4431
           - 4432
           - 4433
           - 4434
+          - 4477
           - 4494
+          - 4499
           - 4501
           - 4513
           - 4514
           - 4515
           - 4516
           - 4547
+          - 4548
           - 4549
           - 4568
           - 4569
@@ -2308,6 +2382,21 @@ presets:
           - 4576
           - 4577
           - 4594
+          - 4636
+          - 4637
+          - 4638
+          - 4644
+          - 4647
+          - 4648
+          - 4649
+          - 4650
+          - 4651
+          - 4652
+          - 4653
+          - 4654
+          - 4655
+          - 4656
+          - 4673
   - - <color=0xFFFD96CF>※ D-Scan：防御</color>
     - - - alwaysShownStates
         - []
@@ -2321,6 +2410,7 @@ presets:
           - 29
           - 30
           - 31
+          - 90
           - 237
           - 324
           - 358
@@ -2344,6 +2434,8 @@ presets:
           - 832
           - 833
           - 834
+          - 863
+          - 864
           - 883
           - 893
           - 894
@@ -2357,6 +2449,12 @@ presets:
           - 1149
           - 1201
           - 1202
+          - 1246
+          - 1247
+          - 1249
+          - 1250
+          - 1275
+          - 1276
           - 1283
           - 1305
           - 1404
@@ -2369,13 +2467,19 @@ presets:
           - 1527
           - 1534
           - 1538
+          - 1548
           - 1657
+          - 1876
+          - 1924
           - 1972
           - 2001
           - 2016
           - 2017
           - 4088
+          - 4093
+          - 4107
           - 4594
+          - 4644
   - - <color=0xFFFFCCFF>✈ 航行：空间站</color>
     - - - alwaysShownStates
         - []
@@ -2418,7 +2522,9 @@ presets:
           - 1548
           - 1657
           - 1704
+          - 1876
           - 1915
+          - 1924
           - 2015
           - 2016
           - 2017
@@ -2428,6 +2534,7 @@ presets:
           - 4093
           - 4547
           - 4549
+          - 4644
   - - ⌘ 图标：作战/目标/友军（-无人机 +残骸）
     - - - alwaysShownStates
         - []
@@ -2881,7 +2988,9 @@ presets:
           - 4432
           - 4433
           - 4434
+          - 4477
           - 4494
+          - 4499
           - 4501
           - 4547
           - 4549
@@ -2894,6 +3003,514 @@ presets:
           - 4576
           - 4577
           - 4594
+          - 4636
+          - 4637
+          - 4638
+          - 4644
+          - 4647
+          - 4648
+          - 4649
+          - 4650
+          - 4651
+          - 4652
+          - 4653
+          - 4654
+          - 4655
+          - 4656
+          - 4673
+  - - ⌘ 图标：作战/目标/友军（+无人机 +残骸）
+    - - - alwaysShownStates
+        - []
+      - - filteredStates
+        - - 21
+          - 36
+          - 37
+      - - groups
+        - - 6
+          - 10
+          - 15
+          - 25
+          - 26
+          - 27
+          - 28
+          - 29
+          - 30
+          - 31
+          - 90
+          - 99
+          - 100
+          - 101
+          - 180
+          - 182
+          - 185
+          - 186
+          - 237
+          - 279
+          - 286
+          - 287
+          - 288
+          - 297
+          - 298
+          - 301
+          - 306
+          - 310
+          - 319
+          - 324
+          - 337
+          - 358
+          - 361
+          - 365
+          - 366
+          - 380
+          - 381
+          - 383
+          - 411
+          - 419
+          - 420
+          - 435
+          - 446
+          - 463
+          - 479
+          - 485
+          - 492
+          - 494
+          - 495
+          - 496
+          - 513
+          - 520
+          - 522
+          - 523
+          - 527
+          - 533
+          - 534
+          - 540
+          - 541
+          - 543
+          - 544
+          - 547
+          - 548
+          - 550
+          - 551
+          - 552
+          - 553
+          - 554
+          - 555
+          - 556
+          - 557
+          - 558
+          - 559
+          - 560
+          - 561
+          - 562
+          - 563
+          - 564
+          - 565
+          - 566
+          - 567
+          - 568
+          - 569
+          - 570
+          - 571
+          - 572
+          - 573
+          - 574
+          - 575
+          - 576
+          - 577
+          - 578
+          - 579
+          - 580
+          - 581
+          - 582
+          - 583
+          - 584
+          - 593
+          - 594
+          - 595
+          - 596
+          - 597
+          - 602
+          - 603
+          - 604
+          - 605
+          - 606
+          - 611
+          - 612
+          - 613
+          - 614
+          - 615
+          - 620
+          - 621
+          - 622
+          - 623
+          - 624
+          - 629
+          - 630
+          - 631
+          - 632
+          - 633
+          - 639
+          - 640
+          - 641
+          - 659
+          - 665
+          - 666
+          - 667
+          - 668
+          - 669
+          - 670
+          - 671
+          - 672
+          - 673
+          - 674
+          - 675
+          - 676
+          - 677
+          - 678
+          - 679
+          - 680
+          - 681
+          - 682
+          - 683
+          - 684
+          - 685
+          - 686
+          - 687
+          - 688
+          - 689
+          - 690
+          - 691
+          - 692
+          - 693
+          - 694
+          - 695
+          - 696
+          - 697
+          - 698
+          - 699
+          - 700
+          - 701
+          - 702
+          - 703
+          - 704
+          - 705
+          - 706
+          - 715
+          - 755
+          - 756
+          - 757
+          - 758
+          - 759
+          - 760
+          - 761
+          - 784
+          - 789
+          - 790
+          - 791
+          - 792
+          - 793
+          - 794
+          - 795
+          - 796
+          - 797
+          - 798
+          - 799
+          - 800
+          - 801
+          - 802
+          - 803
+          - 804
+          - 805
+          - 806
+          - 807
+          - 808
+          - 809
+          - 810
+          - 811
+          - 812
+          - 813
+          - 814
+          - 816
+          - 817
+          - 818
+          - 819
+          - 820
+          - 821
+          - 822
+          - 823
+          - 824
+          - 825
+          - 826
+          - 827
+          - 828
+          - 829
+          - 830
+          - 831
+          - 832
+          - 833
+          - 834
+          - 835
+          - 836
+          - 843
+          - 844
+          - 845
+          - 846
+          - 847
+          - 848
+          - 849
+          - 850
+          - 851
+          - 852
+          - 861
+          - 863
+          - 864
+          - 865
+          - 866
+          - 867
+          - 868
+          - 875
+          - 883
+          - 893
+          - 894
+          - 897
+          - 898
+          - 900
+          - 902
+          - 906
+          - 920
+          - 922
+          - 924
+          - 925
+          - 927
+          - 941
+          - 952
+          - 959
+          - 960
+          - 961
+          - 963
+          - 982
+          - 983
+          - 984
+          - 985
+          - 986
+          - 987
+          - 988
+          - 1003
+          - 1005
+          - 1006
+          - 1007
+          - 1012
+          - 1022
+          - 1051
+          - 1052
+          - 1053
+          - 1054
+          - 1056
+          - 1149
+          - 1159
+          - 1166
+          - 1167
+          - 1168
+          - 1169
+          - 1174
+          - 1175
+          - 1176
+          - 1177
+          - 1178
+          - 1179
+          - 1180
+          - 1181
+          - 1182
+          - 1183
+          - 1184
+          - 1185
+          - 1186
+          - 1201
+          - 1202
+          - 1207
+          - 1246
+          - 1247
+          - 1249
+          - 1250
+          - 1252
+          - 1255
+          - 1259
+          - 1262
+          - 1265
+          - 1273
+          - 1274
+          - 1275
+          - 1276
+          - 1283
+          - 1285
+          - 1286
+          - 1287
+          - 1288
+          - 1305
+          - 1307
+          - 1310
+          - 1312
+          - 1316
+          - 1402
+          - 1404
+          - 1406
+          - 1408
+          - 1411
+          - 1412
+          - 1413
+          - 1414
+          - 1452
+          - 1453
+          - 1454
+          - 1455
+          - 1465
+          - 1527
+          - 1529
+          - 1530
+          - 1534
+          - 1537
+          - 1538
+          - 1548
+          - 1566
+          - 1567
+          - 1568
+          - 1652
+          - 1653
+          - 1657
+          - 1664
+          - 1665
+          - 1666
+          - 1667
+          - 1681
+          - 1682
+          - 1683
+          - 1684
+          - 1685
+          - 1686
+          - 1687
+          - 1688
+          - 1689
+          - 1690
+          - 1691
+          - 1692
+          - 1704
+          - 1720
+          - 1721
+          - 1722
+          - 1724
+          - 1725
+          - 1726
+          - 1727
+          - 1728
+          - 1729
+          - 1731
+          - 1734
+          - 1735
+          - 1736
+          - 1737
+          - 1759
+          - 1761
+          - 1762
+          - 1764
+          - 1765
+          - 1766
+          - 1767
+          - 1768
+          - 1788
+          - 1789
+          - 1790
+          - 1791
+          - 1792
+          - 1793
+          - 1794
+          - 1795
+          - 1796
+          - 1797
+          - 1798
+          - 1799
+          - 1800
+          - 1803
+          - 1804
+          - 1805
+          - 1806
+          - 1807
+          - 1813
+          - 1814
+          - 1872
+          - 1876
+          - 1878
+          - 1879
+          - 1880
+          - 1895
+          - 1896
+          - 1909
+          - 1924
+          - 1925
+          - 1926
+          - 1927
+          - 1928
+          - 1929
+          - 1956
+          - 1972
+          - 1978
+          - 1982
+          - 1997
+          - 2001
+          - 2009
+          - 2015
+          - 2016
+          - 2017
+          - 2020
+          - 4028
+          - 4033
+          - 4034
+          - 4035
+          - 4036
+          - 4037
+          - 4053
+          - 4073
+          - 4079
+          - 4081
+          - 4088
+          - 4093
+          - 4105
+          - 4106
+          - 4107
+          - 4137
+          - 4431
+          - 4432
+          - 4433
+          - 4434
+          - 4477
+          - 4494
+          - 4499
+          - 4501
+          - 4547
+          - 4549
+          - 4569
+          - 4570
+          - 4571
+          - 4572
+          - 4573
+          - 4574
+          - 4576
+          - 4577
+          - 4594
+          - 4636
+          - 4637
+          - 4638
+          - 4644
+          - 4647
+          - 4648
+          - 4649
+          - 4650
+          - 4651
+          - 4652
+          - 4653
+          - 4654
+          - 4655
+          - 4656
+          - 4673
   - - <color=0xFFFD96CF>※ D-Scan：收割（-无人机）</color>
     - - - alwaysShownStates
         - []
@@ -2949,7 +3566,9 @@ presets:
           - 1202
           - 1246
           - 1247
+          - 1249
           - 1250
+          - 1275
           - 1276
           - 1283
           - 1305
@@ -2964,12 +3583,17 @@ presets:
           - 1534
           - 1538
           - 1657
+          - 1876
+          - 1924
           - 1972
           - 2001
           - 2016
           - 2017
           - 4088
+          - 4093
+          - 4107
           - 4594
+          - 4644
   - - <color=0xFF66FF66>➲ 跑蛋! </color>
     - - - alwaysShownStates
         - []
